# Projecto-PPP

./: CMakeLists.txt  Doxyfile  INSTALL.md  README.md
include/: client.h  colors.h  llist.h  main.h  menu.h  pre_reservation.h  reservation.h  reservation_struct.h  utils.h  xtime.h
src/: client.c  colors.c  llist.c  main.c  menu.c  pre_reservation.c  reservation.c  utils.c  xtime.c
